documented server.js; global.css body: background-attachment: fixed; overflow-x: hidden;

--- a/views/static/global.css
+++ b/views/static/global.css
@@ -36,6 +36,8 @@ body {
   background-image: url("bg.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 img {
   vertical-align: middle;
